--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "core-js": "^3.8.3",
     "oh-vue-icons": "^1.0.0-rc3",
     "primeicons": "^7.0.0",
