--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "caniuse-lite": "^1.0.30001700",
     "core-js": "^3.8.3",
     "oh-vue-icons": "^1.0.0-rc3",
     "primeicons": "^7.0.0",
